# rmua-ego-planner-integration

./: .gitignore
src/: IntelligentUAVChampionshipBase
src/IntelligentUAVChampionshipBase/basic_dev/src/airsim_ros/: CMakeLists.txt
src/IntelligentUAVChampionshipBase/basic_dev/src/basic_dev/: CMakeLists.txt  package.xml
src/IntelligentUAVChampionshipBase/basic_dev/src/controller/: CMakeLists.txt  package.xml
src/IntelligentUAVChampionshipBase/basic_dev/src/imu_gps_odometry/: CMakeLists.txt  package.xml
src/IntelligentUAVChampionshipBase/basic_dev/src/odometry/: CMakeLists.txt
src/IntelligentUAVChampionshipBase/basic_dev/src/odometry/include/: mapmanager.hpp  odometry.hpp
src/IntelligentUAVChampionshipBase/basic_dev/src/odometry/src/: mapmanager.cpp
src/IntelligentUAVChampionshipBase/basic_dev/src/vel_cmd_msgs/: CMakeLists.txt  package.xml
src/IntelligentUAVChampionshipBase/basic_dev/src/vel_cmd_msgs/msg/: VelCmd.msg
src/ego-planner/src/planner/plan_manage/launch/: advanced_param.xml
src/ego-planner/src/planner/plan_manage/src/: ego_replan_fsm.cpp
src/ego_bridge/: CMakeLists.txt  README.md  package.xml
src/ego_bridge/config/: ego_bridge.yaml
src/ego_bridge/launch/: ego_bridge.launch  ego_planner_rmua.launch  ego_planner_rmua_manual.launch
src/ego_bridge/src/: goal_relay.cpp  goal_segmenter.cpp  path_to_vel_cmd.cpp  pcd_map_publisher.cpp  position_cmd_to_vel_cmd.cpp
